uploading final fire_supp_scrub and temp_scrub ntbk edits

--- a/Code/temperature_cleaning_scrub.ipynb
+++ b/Code/temperature_cleaning_scrub.ipynb
@@ -993,6 +993,171 @@
    "source": [
     "temp_df.to_csv('../data/temp_cleaned.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23439719-7487-46b5-aa23-acb65b367cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c3a9b0cd-97ee-498b-82cd-4b3a1486f555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cleaned data is posted on drive demo to pull \n",
+    "url = 'https://drive.google.com/file/d/1K3Z-IDEU439wL0d395CZMUcKqQeWkNxW/view?usp=sharing'\n",
+    "path = 'https://drive.google.com/uc?export=download&id='+url.split('/')[-2]\n",
+    "df = pd.read_csv(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e3bb9249-2272-4461-8263-312d45b9d052",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>state</th>\n",
+       "      <th>d0</th>\n",
+       "      <th>d1</th>\n",
+       "      <th>d2</th>\n",
+       "      <th>d3</th>\n",
+       "      <th>d4</th>\n",
+       "      <th>DSCI_avg</th>\n",
+       "      <th>DSCI_summed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>22.620000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22.620000</td>\n",
+       "      <td>67.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>2.963333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.963333</td>\n",
+       "      <td>8.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>21.286667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>21.286667</td>\n",
+       "      <td>63.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>32.776667</td>\n",
+       "      <td>65.580000</td>\n",
+       "      <td>1.170000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>167.446667</td>\n",
+       "      <td>502.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>5.736667</td>\n",
+       "      <td>15.883333</td>\n",
+       "      <td>23.176667</td>\n",
+       "      <td>26.596667</td>\n",
+       "      <td>24.586667</td>\n",
+       "      <td>346.403333</td>\n",
+       "      <td>1039.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  month state         d0         d1         d2         d3         d4  \\\n",
+       "0  2016      4    AK  22.620000   0.000000   0.000000   0.000000   0.000000   \n",
+       "1  2016      4    AL   2.963333   0.000000   0.000000   0.000000   0.000000   \n",
+       "2  2016      4    AR  21.286667   0.000000   0.000000   0.000000   0.000000   \n",
+       "3  2016      4    AZ  32.776667  65.580000   1.170000   0.000000   0.000000   \n",
+       "4  2016      4    CA   5.736667  15.883333  23.176667  26.596667  24.586667   \n",
+       "\n",
+       "     DSCI_avg  DSCI_summed  \n",
+       "0   22.620000        67.86  \n",
+       "1    2.963333         8.89  \n",
+       "2   21.286667        63.86  \n",
+       "3  167.446667       502.34  \n",
+       "4  346.403333      1039.21  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca60b6aa-5c9a-4e50-a045-5ca65796d19f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
