--- a/Code/Cleaning/mergeofareaandpop.ipynb
+++ b/Code/Cleaning/mergeofareaandpop.ipynb
@@ -2784,9 +2784,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:GA]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-GA-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2798,7 +2798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
