adding classification report for best NN (4c)

--- a/Code/Models/Neural_Net.ipynb
+++ b/Code/Models/Neural_Net.ipynb
@@ -1679,6 +1679,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f13003ef-80a2-409e-a317-60aceab3abca",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Best Overall Performing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "b126eaed-ecf0-4722-829c-96beb87dbf94",
@@ -1998,19 +2007,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "80fd3e83-32ab-4998-9bb8-958acdbbc24a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.65      0.20      0.30     13770\n",
+      "           1       0.55      0.23      0.32      9591\n",
+      "           2       0.82      0.21      0.33      5723\n",
+      "           3       0.44      0.31      0.37      3335\n",
+      "           4       0.30      0.06      0.09      4278\n",
+      "           5       0.15      0.07      0.09      4677\n",
+      "           6       0.00      0.05      0.00       107\n",
+      "           7       0.00      0.06      0.00       124\n",
+      "           8       0.01      0.04      0.02       107\n",
+      "           9       0.37      1.00      0.54       107\n",
+      "\n",
+      "    accuracy                           0.19     41819\n",
+      "   macro avg       0.33      0.22      0.21     41819\n",
+      "weighted avg       0.53      0.19      0.27     41819\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "y_true = y_test\n",
+    "y_pred = model4c.predict(X_test)\n",
+    "preds = model4c.predict(Z_test)\n",
+    "\n",
+    "rounded_preds4c = np.argmax(preds, axis = -1)\n",
+    "y_test4c = np.argmax(y_test, axis = -1)\n",
+    "\n",
+    "print(classification_report(y_test4c, rounded_preds4c))\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c309d002-1e96-41ae-b498-fb17cd5abfdf",
+   "cell_type": "markdown",
+   "id": "0646c5f5-d7ee-4e20-8de4-41050d9fa553",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
