--- a/Code/Models/Neural_Net.ipynb
+++ b/Code/Models/Neural_Net.ipynb
@@ -1014,6 +1014,20 @@
     "---\n",
     "Attempting best neural net with more balanced classes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa12216b",
+   "metadata": {},
+   "source": [
+    "test\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef03acaf",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
