--- a/Code/Models/Neural_Net.ipynb
+++ b/Code/Models/Neural_Net.ipynb
@@ -3069,7 +3069,7 @@
    "hash": "7b0fa565d2c72dfd329c0dfac10b0e3c3a611378dc2e802a3e54353322a90b9b"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3083,7 +3083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
